feature[TW22177]: Create OSEE Health Dashboard
Change-Id: I9c9168105ab89acc918dd4dfdb85025b7d1a3a6c